--- a/touch_writer/touch_writer.html
+++ b/touch_writer/touch_writer.html
@@ -152,6 +152,8 @@
         <div class="link" id="link1"><span class="rotated">TYPE</span>WRITER</div>
         <div class="link" id="link2">COMPOSER</div>
     </section>
+
+    <section id="found_list"></section>
     
 
     <script src="touch_writer.js"></script>
