--- a/cle.html
+++ b/cle.html
@@ -16,6 +16,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/cle.css" class="css">
   <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch|Poiret+One&display=swap" rel="stylesheet">
+  <link rel="apple-touch-icon" sizes="180x180" href="../pics/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="../pics/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../pics/favicon-32x32.png">
   <title>La clé</title>
 </head>
 <body>
