--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 </head>
 
-<body>
+<body> 
     <div id="topName"><span class="nA">A</span>le<span class="nC">C</span> Lloy<span class="nD">D</span> Pro<span class="nB">B</span>ert</div>
     <div id="QUOTE"></div>
     <div id="masterMenu">
@@ -550,6 +550,17 @@
         </div>
 
     </section>
+    
+    <div id="background_svg">
+        <svg id="back_svg" viewBox="0 0 4000 4000" stroke-width="100">
+            <g id="logo0"><path class="test" stroke-width="100" d="M  1500 2866.03, 2500 1133.97,"></path><path d="M  2000 2000, 2500 2866.03, 1500 2866.03, 1000 2000, 1500 1133.97, 2500 1133.97, 3000 2000, 2500 2866.03,"></path><path d="M  1500 1133.97, 3000 2000,
+            "></path></g>
+            
+            <g id="logo1"><path class="test" stroke-width="50"d="M  1750 1566.99, 2250 2433.01,"></path><path class="test" stroke-width="50"  d="M  1750 2433.01, 2000 2000,"></path><path class="test" stroke-width="50" d="M  1500 2000, 2250 1566.99,"></path><path stroke-width="50" d="M  2500 2000, 2500 2000,
+            "></path></g>
+            <g id="logo2"><path class="test" stroke-width="25" d="M  1875 1783.49, 2125 1783.49, 1750 2000,"></path><path class="test" stroke-width="25" d="M  2125 2216.51, 1875 2216.51, 2250 2000,"></path><path class="test" stroke-width="25" d="M  2000 2000, 2000 2000,
+            "></path></g></svg>
+    </div>
 
     <script src="js/index.js"></script>
     <script src="js/linear.js"></script>
