--- a/touch_writer/touch_writer.html
+++ b/touch_writer/touch_writer.html
@@ -31,7 +31,7 @@
         </header>
     </a>
 
-    <p class="page_name">Graphieros TouchWriter</p>
+    <p class="page_name">Graphieros <b>Touch</b>Writer</p>
     <p class="bs">L'éditeur <b>universel</b> de graphieros, <br>pour écrire dans l'idéolangue hexagonale<br> et en garder une image</p>
 
     <a href="touch_writer.mp4"><p class="sources">Le tutoriel video</p></a>
