--- a/touch_writer/touch_writer.html
+++ b/touch_writer/touch_writer.html
@@ -29,10 +29,18 @@
                 <span class="a">A</span>le<span class="c">C</span> Lloy<span class="d">D</span> Pro<span class="b">B</span>ert
             </div>
         </header>
-    </a>
+    </a> 
 
     <p class="page_name">Graphieros <b>Touch</b>Writer</p>
-    <p class="bs">L'éditeur <b>universel</b> de graphieros, <br>pour écrire dans l'idéolangue hexagonale<br> et en garder une image</p>
+
+    <div class="graphieros_title">
+        <svg id="graphieros_title_svg" viewBox="0 0 4000 4000" stroke="white" stroke-width="100"><path class="test" stroke-width="100" style="stroke:rgb(255, 241, 168)" d="M  1500 1133.97, 1500 2866.03, 2500 2866.03, 2500 1133.97,"></path><path class="test" stroke-width="100" style="stroke:rgb(255, 241, 168)" d="M  1000 2000, 1500 2866.03,"></path><path class="test" stroke-width="100" style="stroke:rgb(255, 241, 168)" d="M  2500 2866.03, 3000 2000,"></path><path class="test" stroke-width="100" style="stroke:rgb(255, 241, 168)" d="M  2000 2000, 2000 2000,
+            "></path><path class="test" stroke-width="50" style="stroke:rgb(255, 230, 97)" d="M  1500 2000, 2500 2000,"></path><path class="test" stroke-width="50" style="stroke:rgb(255, 230, 97)" d="M  1750 1566.99, 2000 2000, 1750 2433.01,"></path><path class="test" stroke-width="50" style="stroke:rgb(255, 230, 97)" d="M  2250 1566.99, 2250 1566.99,"></path><path class="test" stroke-width="50" style="stroke:rgb(255, 230, 97)" d="M  2250 2433.01, 2250 2433.01,
+            "></path><path class="test" stroke-width="25" style="stroke:rgb(148, 124, 0)" d="M  1875 1783.49, 2125 1783.49,"></path><path class="test" stroke-width="25" style="stroke:rgb(148, 124, 0)" d="M  1750 2000, 2000 2000,"></path><path class="test" stroke-width="25" style="stroke:rgb(148, 124, 0)" d="M  1875 2216.51, 2125 2216.51,"></path><path class="test" stroke-width="25" style="stroke:rgb(148, 124, 0)" d="M  2250 2000, 2250 2000,
+            "></path></svg>
+    </div>
+
+    <p class="bs">L'éditeur <span class="d"><b>universel</b></span> de graphieros, <br>pour écrire dans l'idéolangue hexagonale<br> et en garder une image</p>
 
     <a href="touch_writer.mp4"><p class="sources">Le tutoriel video</p></a>
     <a href="https://graphieros.com/php/glyphs.php" target="_blank"><p class="sources">Lexique du graphieros</p></a>
@@ -64,6 +72,39 @@
     
 
     <section class="clavier" id ="clavier">
+
+        <div class="line" id="line_prefix">
+            <div class="prefix_key" id="pk0">
+                <svg viewBox="0 0 256 256"><path d="M 83,50.06,173,205.94"></path><path d="M 38,128,173,50.06"></path><path d="M 83,205.94,218,128"></path></svg>
+            </div>
+            <div class="prefix_key" id="pk1">
+                <svg viewBox="0 0 256 256"><path d="M 83,50.06,173,205.94"></path><path d="M 83,205.94,128,128"></path><path d="M 38,128,173,50.06"></path><path d="M 218,128,218,128"></path></svg>
+            </div>
+            <div class="prefix_key" id="pk2">
+                <svg viewBox="0 0 256 256"><path d="M 173,205.94,38,128,83,50.06,83,205.94,218,128,128,128"></path><path d="M 173,50.06,173,50.06"></path></svg>
+            </div>
+            <div class="prefix_key" id="pk3">
+                <svg viewBox="0 0 256 256"><path d="M 83,205.94,83,50.06,173,205.94,173,50.06,83,205.94"></path><path d="M 38,128,218,128"></path></svg>
+            </div>
+            <div class="prefix_key" id="pk4">
+                <svg viewBox="0 0 256 256"><path d="M 83,50.06,83,205.94,173,205.94,173,50.06,83,50.06,38,128,218,128,173,50.06"></path></svg>
+            </div>
+            <div class="prefix_key" id="pk5">
+                <svg viewBox="0 0 256 256"><path d="M 83,205.94,128,128,173,205.94,83,205.94,83,50.06,173,50.06,173,205.94"></path><path d="M 38,128,38,128"></path><path d="M 218,128,218,128"></path></svg>
+            </div>
+            <div class="prefix_key" id="pk6">
+                <svg viewBox="0 0 256 256"><path d="M 173,50.06,83,50.06,38,128,83,205.94,173,205.94,128,128,173,50.06,38,128"></path><path d="M 218,128,218,128"></path></svg>
+            </div>
+            <div class="prefix_key" id="pk7">
+                <svg viewBox="0 0 256 256"><path d="M 83,50.06,83,205.94,173,50.06,173,205.94,218,128,173,50.06,83,50.06,38,128,83,205.94,173,205.94"></path></svg>
+            </div>
+            <div class="prefix_key" id="pk8">
+                <svg viewBox="0 0 256 256"><path d="M 83,205.94,83,50.06,128,128,173,50.06,173,205.94,218,128,173,50.06,83,50.06,38,128,83,205.94,173,205.94"></path></svg>
+            </div>
+            <div class="prefix_key" id="pk9">
+                <svg viewBox="0 0 256 256"><path d="M 83,50.06,128,128,218,128"></path><path d="M 83,205.94,128,128"></path><path d="M 38,128,38,128"></path><path d="M 173,50.06,173,50.06"></path><path d="M 173,205.94,173,205.94"></path></svg>
+            </div>
+        </div>
 
         <div class="line" id="line_numbers">
             <div id="light">0</div>
