--- a/cle.html
+++ b/cle.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+ 
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-65449763-3"></script>
 <script>
@@ -30,7 +30,7 @@
     </p>
 
     <svg class="svgTitle" id="lacle" viewbox="0 0 200 233">
-      <path d="M 18,122,22,126,178,122,182,126,18,122,22,126" style="stroke:rgb(50,150,50); fill:rgb(50,150,50);"/><path d="M 138,191,142,195,178,122,182,126,138,191,142,195" style="stroke:rgb(50,150,50); fill:rgb(50,150,50);"/><path d="M 58,191,62,195,98,122,102,126,58,191,62,195,58,53,62,57,58,191,62,195" style="stroke:rgb(50,150,50); fill:rgb(50,150,50);"/><path d="M 140,55,140,55" style="stroke:rgb(50,150,50); stroke-width:12px"/>
+      <path d="M 18,122,22,126,178,122,182,126,18,122,22,126" style="stroke:cornflowerblue; fill:cornflowerblue;"/><path d="M 138,191,142,195,178,122,182,126,138,191,142,195" style="stroke:cornflowerblue; fill:cornflowerblue;"/><path d="M 58,191,62,195,98,122,102,126,58,191,62,195,58,53,62,57,58,191,62,195" style="stroke:cornflowerblue; fill:cornflowerblue;"/><path d="M 140,55,140,55" style="stroke:cornflowerblue; stroke-width:12px"/>
     </svg>
 
     <svg class="nmo_ka_tae" viewbox="0 0 233 350">
@@ -43,7 +43,7 @@
     <div class="choice" id="phono">PHONOLOGIE</div>
 
     <svg class="num" viewbox="0 0 233 200">
-      <path d="M 78,18,82,22,78,156,82,160,78,18,82,22,158,156,162,160,78,18,82,22" style="stroke:rgb(50,150,50); fill:rgb(50,150,50);"/><path d="M 158,156,162,160,158,18,162,22,158,156,162,160" style="stroke:rgb(50,150,50); fill:rgb(50,150,50);"/><path d="M 40,89,40,89" style="stroke:rgb(50,150,50);"/><path d="M 200,89,200,89" style="stroke:rgb(50,150,50);"/><path d="M 840,89" style="stroke:rgb(10,60,10);"/><path d="M 120,89,100,55,120,89,140,55,120,89" style="stroke:rgb(10,60,10);"/><path d="M 118,87,122,91,98,53,102,57,118,87,122,91,138,53,142,57,118,87,122,91,158,87,162,91,118,87,122,91,138,122,142,126,118,87,122,91,98,122,102,126,118,87,122,91,78,87,82,91,118,87,122,91" style="stroke:rgb(10,60,10); fill:rgb(10,60,10);"/>
+      <path d="M 78,18,82,22,78,156,82,160,78,18,82,22,158,156,162,160,78,18,82,22" style="stroke:cornflowerblue; fill:cornflowerblue;"/><path d="M 158,156,162,160,158,18,162,22,158,156,162,160" style="stroke:cornflowerblue; fill:cornflowerblue;"/><path d="M 40,89,40,89" style="stroke:cornflowerblue;"/><path d="M 200,89,200,89" style="stroke:cornflowerblue;"/><path d="M 840,89" style="stroke:rgb(67,99,156);"/><path d="M 120,89,100,55,120,89,140,55,120,89" style="stroke:rgb(67,99,156);"/><path d="M 118,87,122,91,98,53,102,57,118,87,122,91,138,53,142,57,118,87,122,91,158,87,162,91,118,87,122,91,138,122,142,126,118,87,122,91,98,122,102,126,118,87,122,91,78,87,82,91,118,87,122,91" style="stroke:rgb(67,99,156); fill:rgb(67,99,156);"/>
     </svg>
 
     <svg class="chapterTitle" viewBox="0 0 380 355">
@@ -76,7 +76,7 @@
     <div class="page_box">
       <hr>
       <svg class="page_number" viewbox="0 0 105 100">
-        <path d="M 38,18,42,22,78,87,82,91,38,18,42,22" style="stroke:rgb(50,150,50); fill:rgb(50,150,50);"/><path d="M 38,87,42,91,78,18,82,22,38,87,42,91" style="stroke:rgb(50,150,50); fill:rgb(50,150,50);"/><path d="M 18,53,22,57,98,53,102,57,18,53,22,57" style="stroke:rgb(50,150,50); fill:rgb(50,150,50);"/>
+        <path d="M 38,18,42,22,78,87,82,91,38,18,42,22" style="stroke:cornflowerblue; fill:cornflowerblue;"/><path d="M 38,87,42,91,78,18,82,22,38,87,42,91" style="stroke:cornflowerblue; fill:cornflowerblue;"/><path d="M 18,53,22,57,98,53,102,57,18,53,22,57" style="stroke:cornflowerblue; fill:cornflowerblue;"/>
       </svg>
       <hr>
     </div> 
@@ -109,7 +109,7 @@
     <div class="page_box">
       <hr>
       <svg class="page_number" viewbox="0 0 105 100">
-        <path d="M 38,18,42,22,38,87,42,91,38,18,42,22" style="stroke:rgb(50,150,50); fill:rgb(50,150,50);"/><path d="M 20,55,20,55" style="stroke:rgb(50,150,50);"/><path d="M 80,20,80,20" style="stroke:rgb(50,150,50);"/><path d="M 60,55,60,55" style="stroke:rgb(50,150,50);"/><path d="M 80,89,80,89" style="stroke:rgb(50,150,50);"/><path d="M 100,55,100,55" style="stroke:rgb(50,150,50);"/>
+        <path d="M 38,18,42,22,38,87,42,91,38,18,42,22" style="stroke:cornflowerblue; fill:cornflowerblue;"/><path d="M 20,55,20,55" style="stroke:cornflowerblue;"/><path d="M 80,20,80,20" style="stroke:cornflowerblue;"/><path d="M 60,55,60,55" style="stroke:cornflowerblue;"/><path d="M 80,89,80,89" style="stroke:cornflowerblue;"/><path d="M 100,55,100,55" style="stroke:cornflowerblue;"/>
       </svg>
       <hr>
     </div>
@@ -142,7 +142,7 @@
     <div class="page_box">
       <hr>
       <svg class="page_number" viewbox="0 0 105 100">
-        <path d="M 38,18,42,22,38,87,42,91,38,18,42,22,98,53,102,57,38,18,42,22" style="stroke:rgb(50,150,50); fill:rgb(50,150,50);"/><path d="M 20,55,20,55" style="stroke:rgb(50,150,50);"/><path d="M 60,55,60,55" style="stroke:rgb(50,150,50);"/><path d="M 80,20,80,20" style="stroke:rgb(50,150,50);"/><path d="M 80,89,80,89" style="stroke:rgb(50,150,50);"/>
+        <path d="M 38,18,42,22,38,87,42,91,38,18,42,22,98,53,102,57,38,18,42,22" style="stroke:cornflowerblue; fill:cornflowerblue;"/><path d="M 20,55,20,55" style="stroke:cornflowerblue;"/><path d="M 60,55,60,55" style="stroke:cornflowerblue;"/><path d="M 80,20,80,20" style="stroke:cornflowerblue;"/><path d="M 80,89,80,89" style="stroke:cornflowerblue;"/>
       </svg>
       <hr>
     </div>
@@ -175,7 +175,7 @@
     <div class="page_box">
       <hr>
       <svg class="page_number" viewbox="0 0 105 100">
-        <path d="M 38,18,42,22,38,87,42,91,38,18,42,22,98,53,102,57,38,18,42,22" style="stroke:rgb(50,150,50); fill:rgb(50,150,50);"/><path d="M 98,53,102,57,38,87,42,91,98,53,102,57" style="stroke:rgb(50,150,50); fill:rgb(50,150,50);"/><path d="M 20,55,20,55" style="stroke:rgb(50,150,50);"/><path d="M 80,20,80,20" style="stroke:rgb(50,150,50);"/><path d="M 80,89,80,89" style="stroke:rgb(50,150,50);"/><path d="M 60,55,60,55" style="stroke:rgb(50,150,50);"/>
+        <path d="M 38,18,42,22,38,87,42,91,38,18,42,22,98,53,102,57,38,18,42,22" style="stroke:cornflowerblue; fill:cornflowerblue;"/><path d="M 98,53,102,57,38,87,42,91,98,53,102,57" style="stroke:cornflowerblue; fill:cornflowerblue;"/><path d="M 20,55,20,55" style="stroke:cornflowerblue;"/><path d="M 80,20,80,20" style="stroke:cornflowerblue;"/><path d="M 80,89,80,89" style="stroke:cornflowerblue;"/><path d="M 60,55,60,55" style="stroke:cornflowerblue;"/>
       </svg>
       <hr>
     </div>
@@ -205,7 +205,7 @@
     <div class="page_box">
       <hr>
       <svg class="page_number" viewbox="0 0 105 100">
-        <path d="M 38,18,42,22,38,87,42,91,38,18,42,22,78,18,82,22,38,18,42,22" style="stroke:rgb(50,150,50); fill:rgb(50,150,50);"/><path d="M 78,87,82,91,38,87,42,91,78,87,82,91,78,18,82,22,78,87,82,91" style="stroke:rgb(50,150,50); fill:rgb(50,150,50);"/><path d="M 20,55,20,55" style="stroke:rgb(50,150,50);"/><path d="M 60,55,60,55" style="stroke:rgb(50,150,50);"/><path d="M 100,55,100,55" style="stroke:rgb(50,150,50);"/>
+        <path d="M 38,18,42,22,38,87,42,91,38,18,42,22,78,18,82,22,38,18,42,22" style="stroke:cornflowerblue; fill:cornflowerblue;"/><path d="M 78,87,82,91,38,87,42,91,78,87,82,91,78,18,82,22,78,87,82,91" style="stroke:cornflowerblue; fill:cornflowerblue;"/><path d="M 20,55,20,55" style="stroke:cornflowerblue;"/><path d="M 60,55,60,55" style="stroke:cornflowerblue;"/><path d="M 100,55,100,55" style="stroke:cornflowerblue;"/>
       </svg>
       <hr>
     </div>
@@ -230,7 +230,7 @@
     <div class="page_box">
       <hr>
       <svg class="page_number" viewbox="0 0 105 100">
-        <path d="M 38,18,42,22,38,87,42,91,38,18,42,22,78,18,82,22,38,18,42,22" style="stroke:rgb(50,150,50); fill:rgb(50,150,50);"/><path d="M 78,87,82,91,78,18,82,22,78,87,82,91,38,87,42,91,78,87,82,91" style="stroke:rgb(50,150,50); fill:rgb(50,150,50);"/><path d="M 18,53,22,57,98,53,102,57,18,53,22,57" style="stroke:rgb(50,150,50); fill:rgb(50,150,50);"/>
+        <path d="M 38,18,42,22,38,87,42,91,38,18,42,22,78,18,82,22,38,18,42,22" style="stroke:cornflowerblue; fill:cornflowerblue;"/><path d="M 78,87,82,91,78,18,82,22,78,87,82,91,38,87,42,91,78,87,82,91" style="stroke:cornflowerblue; fill:cornflowerblue;"/><path d="M 18,53,22,57,98,53,102,57,18,53,22,57" style="stroke:cornflowerblue; fill:cornflowerblue;"/>
       </svg>
       <hr>
     </div>
@@ -264,7 +264,7 @@
     <div class="page_box">
       <hr>
       <svg class="page_number" viewbox="0 0 105 100">
-        <path d="M 38,18,42,22,18,53,22,57,38,18,42,22,78,18,82,22,38,18,42,22" style="stroke:rgb(50,150,50); fill:rgb(50,150,50);"/><path d="M 98,53,102,57,78,18,82,22,98,53,102,57,78,87,82,91,98,53,102,57" style="stroke:rgb(50,150,50); fill:rgb(50,150,50);"/><path d="M 38,87,42,91,78,87,82,91,38,87,42,91,18,53,22,57,38,87,42,91" style="stroke:rgb(50,150,50); fill:rgb(50,150,50);"/><path d="M 60,55,60,55" style="stroke:rgb(50,150,50);"/>
+        <path d="M 38,18,42,22,18,53,22,57,38,18,42,22,78,18,82,22,38,18,42,22" style="stroke:cornflowerblue; fill:cornflowerblue;"/><path d="M 98,53,102,57,78,18,82,22,98,53,102,57,78,87,82,91,98,53,102,57" style="stroke:cornflowerblue; fill:cornflowerblue;"/><path d="M 38,87,42,91,78,87,82,91,38,87,42,91,18,53,22,57,38,87,42,91" style="stroke:cornflowerblue; fill:cornflowerblue;"/><path d="M 60,55,60,55" style="stroke:cornflowerblue;"/>
       </svg>
       <hr>
     </div>
@@ -274,17 +274,17 @@
     <div class="page_box">
       <hr>
       <svg class="page_number" viewbox="0 0 105 100">
-        <path d="M 38,18,42,22,18,53,22,57,38,18,42,22,78,18,82,22,38,18,42,22" style="stroke:rgb(50,150,50); fill:rgb(50,150,50);"/><path d="M 98,53,102,57,78,18,82,22,98,53,102,57,78,87,82,91,98,53,102,57" style="stroke:rgb(50,150,50); fill:rgb(50,150,50);"/><path d="M 38,87,42,91,78,87,82,91,38,87,42,91,18,53,22,57,38,87,42,91" style="stroke:rgb(50,150,50); fill:rgb(50,150,50);"/><path d="M 60,55,60,55" style="stroke:rgb(50,150,50);"/><path d="M 18,53,22,57,98,53,102,57,18,53,22,57" style="stroke:rgb(50,150,50); fill:rgb(50,150,50);"/>
+        <path d="M 38,18,42,22,18,53,22,57,38,18,42,22,78,18,82,22,38,18,42,22" style="stroke:cornflowerblue; fill:cornflowerblue;"/><path d="M 98,53,102,57,78,18,82,22,98,53,102,57,78,87,82,91,98,53,102,57" style="stroke:cornflowerblue; fill:cornflowerblue;"/><path d="M 38,87,42,91,78,87,82,91,38,87,42,91,18,53,22,57,38,87,42,91" style="stroke:cornflowerblue; fill:cornflowerblue;"/><path d="M 60,55,60,55" style="stroke:cornflowerblue;"/><path d="M 18,53,22,57,98,53,102,57,18,53,22,57" style="stroke:cornflowerblue; fill:cornflowerblue;"/>
       </svg>
       <hr>
     </div>
 
     <svg class="arrow" id="arrow_previous" viewbox="0 0 120 120" style="display:none;">
-      <path d="M 18,53,22,57,38,18,42,22,18,53,22,57,38,87,42,91,18,53,22,57,98,53,102,57,18,53,22,57" style="stroke:rgb(50,150,50); fill:rgb(50,150,50);"/><path d="M 80,20,80,20" style="stroke:rgb(50,150,50);"/><path d="M 80,89,80,89" style="stroke:rgb(50,150,50);"/>
+      <path d="M 18,53,22,57,38,18,42,22,18,53,22,57,38,87,42,91,18,53,22,57,98,53,102,57,18,53,22,57" style="stroke:cornflowerblue; fill:cornflowerblue;"/><path d="M 80,20,80,20" style="stroke:cornflowerblue;"/><path d="M 80,89,80,89" style="stroke:cornflowerblue;"/>
     </svg>
 
     <a id="arrow_next" href="cle/cle1.html"><svg class="arrow" viewbox="0 0 120 120">
-      <path d="M 98,53,102,57,78,18,82,22,98,53,102,57,78,87,82,91,98,53,102,57,18,53,22,57,98,53,102,57" style="stroke:rgb(50,150,50); fill:rgb(50,150,50);"/><path d="M 40,20,40,20" style="stroke:rgb(50,150,50);"/><path d="M 40,89,40,89" style="stroke:rgb(50,150,50);"/>
+      <path d="M 98,53,102,57,78,18,82,22,98,53,102,57,78,87,82,91,98,53,102,57,18,53,22,57,98,53,102,57" style="stroke:cornflowerblue; fill:cornflowerblue;"/><path d="M 40,20,40,20" style="stroke:cornflowerblue;"/><path d="M 40,89,40,89" style="stroke:cornflowerblue;"/>
     </svg></a>
 
   </section>
