--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <title>Alec Lloyd Probert</title> 
 
-    <meta name="description" content="Artiste, data & business analyst, programmeur et créateur de l'idéolangue graphieros. Bio, peintures, journal, livres..." />
+    <meta name="description" content="Artiste, data & business analyst, programmeur et créateur de l'idéolangue graphieros. Bio, peintures, journal, livres, applications..." />
     <meta name="google-site-verification" content="3M0g0CGwhq36_jRupfc2k3hDyDAWmfFAAItyW-b9IjM" />
 
 </head>
@@ -90,15 +90,17 @@
             <div class="BIOcontent" id="SAVOIR">
                 Programmation
                 <br><span class="green">
+                
                     JavaScript, CSS, HTML, notions de PHP en lien avec MySQL, Python.
                     <br>
-                    <a href="https://github.com/graphieros" target="_blank"><span class="gold">Consulter ma page GITHUB</span></a>
+                    <a href="https://github.com/graphieros" target="_blank"><span class="gold">Consulter ma page GITHUB </span><svg style="background: white; border-radius:100%;" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm0 6c-3.313 0-6 2.686-6 6 0 2.651 1.719 4.9 4.104 5.693.3.056.396-.13.396-.289v-1.117c-1.669.363-2.017-.707-2.017-.707-.272-.693-.666-.878-.666-.878-.544-.373.041-.365.041-.365.603.042.92.619.92.619.535.917 1.403.652 1.746.499.054-.388.209-.652.381-.802-1.333-.152-2.733-.667-2.733-2.965 0-.655.234-1.19.618-1.61-.062-.153-.268-.764.058-1.59 0 0 .504-.161 1.65.615.479-.133.992-.199 1.502-.202.51.002 1.023.069 1.503.202 1.146-.776 1.648-.615 1.648-.615.327.826.121 1.437.06 1.588.385.42.617.955.617 1.61 0 2.305-1.404 2.812-2.74 2.96.216.186.412.551.412 1.111v1.646c0 .16.096.347.4.288 2.383-.793 4.1-3.041 4.1-5.691 0-3.314-2.687-6-6-6z"/></svg></a>
                 </span>
                 <br><br>
                 Maîtrise d'Excel
                 <br><span class="green">
+                    Conception de tableaux de bord fiables et maintenables <br>
                     Automatisation de tâches avec Python.<br>
-                    Création d'applications en VBA, formateur en interne aux bonnes pratiques de programmation et de conception de tableaux fiables.
+                    Création d'applications en VBA, formateur en interne aux bonnes pratiques de vérification et de conception de tableaux fiables.
                 </span>
                 <br><br>
                 Maîtrise de PowerPoint
@@ -183,7 +185,7 @@
 
             <div class="graphierosNarrative">
                 <p>Le graphieros est une <a href="https://fr.wikipedia.org/wiki/Langue_construite" target="_blank">langue construite</a>, pour être utilisée dans mes tableaux.<br><br>
-                C'est une langue idéogrammatique, composée d'un corpus de <a href="https://graphieros.com/php/glyphs.php"><span class="blue">400</span></a> glyphes, qui représentent des concepts de base.<br><br>
+                C'est une langue idéogrammatique, composée d'un corpus de <a id="glyphLink" href="https://graphieros.com/php/glyphs.php"><span>435</span></a> glyphes, qui représentent des concepts de base.<br><br>
                 L'accumlulation de plusieurs glyphes permet de composer jusqu'aux idées les plus complexes.
                 </p>
             </div>
@@ -272,7 +274,7 @@
                 <a href="cle.html" target="_blank">
                     <div class="graphierosCle" id="cleGraph">
                         <svg class="svgTitle" id="lacle" viewbox="0 0 200 233">
-                            <path d="M 18,122,22,126,178,122,182,126,18,122,22,126" style="stroke:rgb(50,150,50); fill:rgb(50,150,50);"/><path d="M 138,191,142,195,178,122,182,126,138,191,142,195" style="stroke:rgb(50,150,50); fill:rgb(50,150,50);"/><path d="M 58,191,62,195,98,122,102,126,58,191,62,195,58,53,62,57,58,191,62,195" style="stroke:rgb(50,150,50); fill:rgb(50,150,50);"/><path d="M 140,55,140,55" style="stroke:rgb(50,150,50); stroke-width:12px"/>
+                            <path d="M 18,122,22,126,178,122,182,126,18,122,22,126" style="stroke:rg; fill:cornflowerblue;"/><path d="M 138,191,142,195,178,122,182,126,138,191,142,195" style="stroke:cornflowerblue; fill:cornflowerblue;"/><path d="M 58,191,62,195,98,122,102,126,58,191,62,195,58,53,62,57,58,191,62,195" style="stroke:cornflowerblue; fill:cornflowerblue;"/><path d="M 140,55,140,55" style="stroke:cornflowerblue; stroke-width:12px"/>
                           </svg>
                     </div>
                 </a>
@@ -441,7 +443,7 @@
 
     <section class="sections" id="DEV">
         <div class="sectionTitle" id="sectionTitle3">D<span id="EE">E</span>V</div>
-        <p>Programmation, idées et applications</p>
+        <p>Applications pour créer de nouveaux glyphes</p>
         
         <div class="devMenuWrapper">
             <div class="devMenu" id="devMenu0">tracer un glyphe</div>
