--- a/graphieros_journal/graphieros_journal.html
+++ b/graphieros_journal/graphieros_journal.html
@@ -1,31 +1,59 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
+
     <meta charset="UTF-8">
+
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Ecrivez en graphieros fractal avec votre clavier physique !" />
+
         <title>Graphieros Journal</title>
+
         <link rel="stylesheet" href="graphieros_journal.css" class="css">
         <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch|Poiret+One&display=swap" rel="stylesheet">
         <link rel="apple-touch-icon" sizes="180x180" href="../pics/apple-icon-180x180.png">
         <link rel="icon" type="image/png" sizes="192x192"  href="../pics/android-icon-192x192.png">
         <link rel="icon" type="image/png" sizes="32x32" href="../pics/favicon-32x32.png">
+
     </head>
+
 </head>
+
 <body> 
+
     <a href="../index.html">
+
         <header class="title">
+
             <div>
+
                 <span class="a">A</span>le<span class="c">C</span> Lloy<span class="d">D</span> Pro<span class="b">B</span>ert
+
             </div>
+
         </header>
+
     </a>
+
+ 
 
     <section id="main"></section>
 
-    <div class="p">ka-tsi ma-tsi kli-nia-vi-kea</div>
+    <div class="p">de ptae-kadwa ma kli-ney .  mno-fy-go frya mrai-toi mea-lgio-ney</div>
+    <div class="p">vi mea-ka-swa , te mno-fy-go frya fta-ksea ptae-hia-soma-tsi</div>
+    <div class="p">kli-nia-sta-tsi vi mea-nia-d3e .</div>
+    <div class="p">de ptae-kadwa ma kli-keo-grey-hea gzo ptoi-stea boi mea-dea-tsi-soma</div>
+    <div class="p">kwa nmo-ka-tae psoi-ksea fmai mea-kpoile kli-lgya , vi-hia-dwa te</div>
+    <div class="p">vi-vdio-gew te vi-vdio-spea . </div>
+    <div class="p">de ptae-kadwa-hea mrai nmae-kfa ptae-kpoile-ney kme mea-lgio , te kme</div>
+    <div class="p">mea-sa-tae kli-sta , gzo fa-sta de mea-knoi nto nmae-du</div>
+    <div class="p">mea-fa-hia-tsi .</div>
+    <div class="p">mno-fy-go v3ai snoi sme-zai de kli-keo kio-stea-sa !</div>
 
-    
     <script src="graphieros.js"></script>
+
 </body>
+
 </html>
