--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   gtag('js', new Date()); 
 
   gtag('config', 'UA-65449763-3');
-</script> 
+</script>  
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -49,11 +49,12 @@
         <div id="menuBall1" class="menuBall">IDEO</div>
         <a href="cle.html" target="_blank"><div id="menuBallGraphieros" class="menuBall"><svg class="svgCle" viewbox="0 0 120 110"><path d="M 38,18,42,22,38,87,42,91,38,18,42,22" style="stroke:rgb(255,255,255); fill:rgb(255,255,255);"/><path d="M 58,53,62,57,38,87,42,91,58,53,62,57" style="stroke:rgb(255,255,255); fill:rgb(255,255,255);"/><path d="M 98,53,102,57,18,53,22,57,98,53,102,57,78,87,82,91,98,53,102,57" style="stroke:rgb(255,255,255); fill:rgb(255,255,255);"/><path d="M 80,20,80,20" style="stroke:rgb(255,255,255); stroke-width:8px;"/></svg></div></a>
         <div id="menuBall2" class="menuBall">GALERIE</div>
-        <a href="journal.html" target="_blank"><div id="menuBallJournal" class="menuBall">JOURNAL</div></a>
+        <a href="journal.html" target="_blank"><div id="menuBallJournal" class="menuBall">LE CRI<br>DU<br>PANGOLIN</div></a>
         <div id="menuBall3" class="menuBall">DEV</div>
         <a href="gwriter/gwriter.html"><div id="menuBallWriter" class="menuBall"><span class="spin">TYPE</span><br>WRITER</div></a>
         <a href="fractal_gwriter/fractal_gwriter.html"><div id="menuBallFractalWriter" class="menuBall"><span class="spin">FRACTAL</span><br>WRITER</div></a>
         <a href="touch_writer/touch_writer.html"><div id="menuBallTouchWriter" class="menuBall"><span class="spin">TOUCH</span><br>WRITER</div></a>
+        <a href="graphieros_journal/graphieros_journal.html"><div id="menuBallGraphierosJournal" class="menuBall"><span class="spin">GRAPHIEROS</span><br>JOURNAL</div></a>
     </section>
 
     <div id="LANDING"><span class="nA">A</span>le<span class="nC">C</span> Lloy<span class="nD">D</span> Pro<span class="nB">B</span>ert</div>
