--- a/graphieros_journal/graphieros_journal.html
+++ b/graphieros_journal/graphieros_journal.html
@@ -16,7 +16,7 @@
         <link rel="apple-touch-icon" sizes="180x180" href="../pics/apple-icon-180x180.png">
         <link rel="icon" type="image/png" sizes="192x192"  href="../pics/android-icon-192x192.png">
         <link rel="icon" type="image/png" sizes="32x32" href="../pics/favicon-32x32.png">
-
+        <script src="graphieros.js"></script>
     </head>
 
 </head>
@@ -37,22 +37,58 @@
 
     </a>
 
- 
 
-    <section id="main"></section>
 
-    <div class="p">de ptae-kadwa ma kli-ney .  mno-fy-go frya mrai-toi mea-lgio-ney</div>
-    <div class="p">vi mea-ka-swa , te mno-fy-go frya fta-ksea ptae-hia-soma-tsi</div>
-    <div class="p">kli-nia-sta-tsi vi mea-nia-d3e .</div>
-    <div class="p">de ptae-kadwa ma kli-keo-grey-hea gzo ptoi-stea boi mea-dea-tsi-soma</div>
-    <div class="p">kwa nmo-ka-tae psoi-ksea fmai mea-kpoile kli-lgya , vi-hia-dwa te</div>
-    <div class="p">vi-vdio-gew te vi-vdio-spea . </div>
-    <div class="p">de ptae-kadwa-hea mrai nmae-kfa ptae-kpoile-ney kme mea-lgio , te kme</div>
-    <div class="p">mea-sa-tae kli-sta , gzo fa-sta de mea-knoi nto nmae-du</div>
-    <div class="p">mea-fa-hia-tsi .</div>
-    <div class="p">mno-fy-go v3ai snoi sme-zai de kli-keo kio-stea-sa !</div>
+        <div class="svg_title">
+            <svg id="svg_title" viewBox="0 0 4000 4000" stroke="white" stroke-width="100"><path class="test" stroke-width="100" style="stroke:rgb(165,218,243)" d="M  1500 2866.03, 2000 2000, 2500 2866.03, 1500 2866.03, 1500 1133.97, 2500 1133.97, 2500 2866.03,"></path><path class="test" stroke-width="100" style="stroke:rgb(165, 218, 243)" d="M  1000 2000, 1000 2000,"></path><path class="test" stroke-width="100" style="stroke:rgb(165,218,243)" d="M  3000 2000, 3000 2000,"></path><path class="test" stroke-width="50" style="stroke:rgb(100, 194, 237)" d="M  1500 2000, 2250 1566.99,"></path><path class="test" stroke-width="50" style="stroke:rgb(100, 194, 237)" d="M  1750 1566.99, 2250 2433.01,"></path><path class="test" stroke-width="50" style="stroke:rgb(100, 194, 237)" d="M  1750 2433.01, 2000 2000,"></path><path class="test" stroke-width="50" style="stroke:rgb(100, 194, 237)" d="M  2250 1566.99, 1750 1566.99, 1500 2000, 1750 2433.01, 2250 2433.01, 2500 2000, 2000 2000, 1750 2433.01,"></path><path class="test" stroke-width="25" style="stroke:rgb(49, 150, 197)" d="M  1875 1783.49, 2125 1783.49,"></path><path class="test" stroke-width="25" style="stroke:rgb(49,150,197)" d="M  1750 2000, 2000 2000,"></path><path class="test" stroke-width="25" style="stroke:rgb(49,150,197)" d="M  1875 2216.51, 2125 2216.51,"></path><path class="test" stroke-width="25" style="stroke:rgb(49,150,197)" d="M  2250 2000, 2250 2000,"></path><path class="test" stroke-width="12.5" style="stroke:rgb(20,90,122)" d="M  1875 2000, 1937.5 2108.25, 1937.5 1891.75,"></path><path class="test" stroke-width="12.5" style="stroke:rgb(20,90,122)" d="M  2000 2000, 2062.5 2108.25, 2062.5 1891.75,"></path><path class="test" stroke-width="12.5" style="stroke:rgb(20,90,122)" d="M  2125 2000, 2125 2000,"></path><path class="test" stroke-width="6.25" style="stroke:rgb(50,50,50)" d="M  1968.75 1945.87, 1937.5 2000, 1968.75 2054.13, 2000 2000, 2031.25 2054.13, 2062.5 2000, 2031.25 1945.87,
+                "></path></svg>
+        </div>
+        
 
-    <script src="graphieros.js"></script>
+    <section class="global_wrapper"> 
+
+        <section class="main" id="main0"></section>
+        <section class="main" id="main1"></section>
+        <section class="main" id="main2"></section>
+
+        <div class="p0">de ptae-kadwa ma kli-ney .  mno-fy-go frya mrai-toi mea-lgio-ney</div>
+        <div class="p0">vi mea-ka-swa , te mno-fy-go frya fta-ksea ptae-hia-soma-tsi</div>
+        <div class="p0">kli-nia-sta-tsi vi mea-nia-d3e .</div>
+        <div class="p0">de ptae-kadwa ma kli-keo-grey-hea gzo ptoi-stea boi mea-dea-tsi-soma</div>
+        <div class="p0">kwa nmo-ka-tae psoi-ksea fmai mea-kpoile kli-lgya , vi-hia-dwa te</div>
+        <div class="p0">vi-vdio-gew te vi-vdio-spea . </div>
+        <div class="p0">de ptae-kadwa-hea mrai nmae-kfa ptae-kpoile-ney kme mea-lgio , te kme</div>
+        <div class="p0">mea-sa-tae kli-sta , gzo fa-sta de mea-knoi nto nmae-du</div>
+        <div class="p0">mea-fa-hia-tsi .</div>
+        <div class="p0">mno-fy-go v3ai snoi sme-zai de kli-keo kio-stea-sa !</div>
+
+        <div class="p1"></div>
+        <div class="p1"></div>
+        <div class="p1">ka-fy-go sta de kio-tew-ma vi mea-sfi</div>
+        <div class="p1">gzo ka-fy-go sa-kme mea-hae-to-trea-frey</div>
+        <div class="p1">te sta de-tsi pkia-tsi grae-tsi te vlye-tsi</div>
+        <div class="p1">de kio-tew-ma kli-keo-grey-hea vi-nsa-gew</div>
+        <div class="p1">sme-zai nmae-kfa ptae-fkai-gry-gnae kli-mto-r3a</div>
+        <div class="p1"></div>
+        <div class="p1"></div>
+        <div class="p1"></div>
+
+        <div class="p2">fkwe kdie-fy-go psoi-grae</div>
+        <div class="p2">psoi-sta kio-skai vi-sbo</div>
+        <div class="p2">de kio psoi-go mea-hea</div>
+        <div class="p2">kwa kdie-fy-go psoi-v3ai</div>
+        <div class="p2">ra di mea-rgia-kme-ra</div>
+        <div class="p2">kme ksea ptae-ney-hea-tsi</div>
+        <div class="p2">te mrai kio-skai-soma-tsi</div>
+        <div class="p2">vi mriy-tsi kli-stea-tsi</div>
+        <div class="p2">kme sta-de-tsi le si</div>
+        <div class="p2">sme-zai kfa mea-ney-dse</div>
+
+</section>        
+<br><br><br><br><br><br><br>
+    <script>main("main0", "p0");</script>
+    <script>main("main1", "p1");</script>
+    <script>main("main2", "p2");</script>
 
 </body>
 
