--- a/graphieros_journal/graphieros_journal.html
+++ b/graphieros_journal/graphieros_journal.html
@@ -19,29 +19,22 @@
         <script src="../graphieros_mini.js"></script>
     </head>
 
-</head>
+</head> 
 
 <body> 
 
     <a href="../index.html">
-
         <header class="title">
-
             <div>
-
                 <span class="a">A</span>le<span class="c">C</span> Lloy<span class="d">D</span> Pro<span class="b">B</span>ert
-
             </div>
-
         </header>
-
     </a>
 
 
-
-        <div id="svg_title"></div>
-        <div id="svg_title_coords">wsxwzex-qq-dd zx-ws-qezqwxdsw ze-qs-wx-dd qwz-sxe-dd zqwsxde</div>
-        <script>fractal("svg_title", "svg_title_coords", 200, 100,150,100, 1)</script>
+    <div id="svg_title"></div>
+    <div id="svg_title_coords">wsxwzex-qq-dd zx-ws-qezqwxdsw ze-qs-wx-dd qwz-sxe-dd zqwsxde</div>
+    <script>fractal("svg_title", "svg_title_coords", 200, 100,150,100, 1)</script>
 
     <section class="global_wrapper"> 
 
@@ -53,6 +46,15 @@
         <div id="frac2"></div>
         <div id="main3"></div>
         <div id="mol1"></div>
+        <section class="eight" id="eight0"></section>
+        <section class="molecules">
+            <div id="mol2"></div>
+            <div id="mol3"></div>
+            <div id="mol4"></div>
+            <div id="mol5"></div>
+            <div id="mol6"></div>
+            <div id="mol7"></div>
+        </section>
 
         <div class="p0">fkwe kdie-fy-go psoi-grae</div>
         <div class="p0">psoi-sta kio-skai vi-sbo</div>
@@ -96,6 +98,22 @@
 
         <div id="m1">mea keo grey hea</div>
 
+        <div class="p4">de-tsi ka-tsi ma-tsi kli-keo-tsi te zaw kli-nia-vi-kea-tsi .</div>
+        <div class="p4">mea-ka frya-ksea ptae-fkai-tsi kli-plea-tsi kme fa-sa-tsi-sola-tsi</div>
+        <div class="p4">kli-vdio-snea-tsi . ka-fy-go sta-de-tsi ka-tsi vi-? te</div>
+        <div class="p4">sme-zai zei hi-ma-tsi pkia-tsi kli-ney-tsi kwa ka-fy-go</div>
+        <div class="p4">hi-3i kme kli-nmae-kfa . de kio kli-hae-to-trea-frey-sola-tsi</div>
+        <div class="p4">ma pkae-da mea-bwa-pfae-tpe , te fa-sta ptae-mrai-tsi kwa</div>
+        <div class="p4">nia-v3ai kpae de mea-vnia-sa-pkia-d3e tpe ptae-bdi-sola , roi di</div>
+        <div class="p4">mea-mrai-kpoile-sola . ka-tsi hi-dvo-pfae kme sa-kme-kio-sola .</div>
+
+        <div id="m2">mea kwe ka</div>
+        <div id="m3">le kto fni sola</div>
+        <div id="m4">kli nia vi hia psoi</div>
+        <div id="m5">kio hae to trea frey</div>
+        <div id="m6">ma</div>
+        <div id="m7">kli keo grey hea</div>
+
     </section>        
 <br><br><br><br><br><br><br>
 
@@ -108,6 +126,13 @@
     fractal("frac2", "f2", 300, 255,99,71,0);
     linear("main3", "p3", 30, 255,255,255);
     molecular("mol1", "m1", 300, 255, 215,0);
+    linear("eight0", "p4", 20, 255,255,255);
+    molecular("mol2", "m2", 100, 100,149,237);
+    molecular("mol3", "m3", 100, 100,149,237);
+    molecular("mol4", "m4", 100, 100,149,237);
+    molecular("mol5", "m5", 100, 255,99,71);
+    molecular("mol6", "m6", 100, 255,99,71);
+    molecular("mol7", "m7", 100, 255,99,71);
 </script>
     
 
